--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a:hover {
     color: lightgray;
 }
 .hexID {
-    margin: 0px 40vmax;
+    margin: 35vw;
     margin-top: 10px;
     padding: 10px 0px;
     display: block;
